--- a/style.css
+++ b/style.css
@@ -1,26 +1,30 @@
+* {
+  box-sizing: border-box;
+}
 h1 {
   color: blue;
   text-align: center;
   font-size: 40px;
 }
-
-p {
-  background-color: aqua;
-  font-size: 20px;
-  color: brown;
-  opacity: 0.8;
-}
-
-h2 {
-  color: red;
-  background-color: black;
-  font-weight: bold;
-}
 div {
-  border: 20px black;
-  padding: 1px;
+  background-color: aqua;
+  }
+h2  {
+  color: red;
 }
-.yoda {
-  border: 1px solid black;
+.columns {
+  border: 1px solid;
+  width: 32.5%;
+  text-align: center;
+  float: left;
+  height: 200px;
+  margin-right: 5px;
+}
+@media (min-width: 992px) {
   
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .columns {
+    width: 50%;
+    }
 }
