--- a/style.css
+++ b/style.css
@@ -24,8 +24,16 @@ h2  {
   
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  .columns {
-    width: 50%;
-    align-content: center;
-    }
+    #yoda {
+    width: 45%;
 }
+  #vader {
+    width: 45%;
+    
+  }
+  #obiwan {
+    width: 90%;
+    }
+  }
+  
+
