--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 }
 h1 {
   color: blue;
-  text-align: center;
+  text-align: right;
   font-size: 40px;
 }
 div {
-  background-color: aqua;
+  background-color: lightgray;
   }
 h2  {
   color: red;
