--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 h1 {
   color: blue;
-  text-align: right;
+  text-align: center;
   font-size: 40px;
 }
 div {
@@ -11,6 +11,7 @@ div {
   }
 h2  {
   color: red;
+  text-align: right;
 }
 .columns {
   border: 1px solid;
